# Atem

./: .gitignore  AGENTS.md  CLAUDE.md  CLIENT_AUTH_COMPLETE.md  COMPLETE_SUMMARY.md  CONNECTION_PRIORITY.md  Cargo.toml  DEPLOYMENT_STATUS.md  IMPLEMENTATION_SUMMARY.md  QUICK_TEST.md  README.md  RELAY_COMPLETE.md  ROADMAP.md  SESSION_AUTH_IMPLEMENTATION.md  TEST_CASES.md  UNIVERSAL_SESSIONS.md  build.rs  build.sh  config.example.toml  convo.example.toml
.github/workflows/: release.yml
assets/convo/: README.md  VERSION  conversational-ai-api.js
configs/: README.md  config.example.toml  convo.example.toml  webhooks.example.toml
designs/: HLD.md  LLD.md  agent-visualize.md  atem-identity.md  codex-launcher-design.md  connection-priority.md  credential-flow.md  data-flow-between-atem-and-astation.md  relay-support.md  remote-agent-control.md  roadmap.md  session-auth.md  test-cases.md  universal-sessions.md  validation-week0.md  vault-implementation-plan.md  vault.md  voice-coding-stages.md
native/include/: atem_rtm.h
native/src/: atem_rtm.cpp  atem_rtm_real.cpp
npm/: README.md  install.js  package.json
scripts/: install.sh  release.sh  run-local-dev-tests.sh  test-create-agent.sh  update-convoai-toolkit.sh
src/: acp_client.rs  agent_client.rs  agent_detector.rs  agent_registry.rs  agent_visualize.rs  agora_api.rs  ai_client.rs  app.rs  auth.rs  claude_client.rs  cli.rs  codex_client.rs  command.rs  config.rs  convo_config.rs  convo_test_server.rs  convo_wizard.rs  credentials.rs  diagram_server.rs  dispatch.rs  files_server.rs  main.rs  repl.rs  rtc_test_server.rs  rtm_client.rs  sso_auth.rs  time_sync.rs  token.rs  vault_client.rs  visual_explainer.rs  webhook_server.rs  websocket_client.rs
src/tui/: draw.rs  mod.rs  voice_fx.rs
src/web_server/: browser.rs  cert.rs  html.rs  mod.rs  net.rs  request.rs  token_endpoint.rs
tests/fixtures/: convo_full.toml
(+3 files in other folders)
