[package]
name = "atem"
version = "0.4.35"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
ratatui = { version = "0.29", features = ["scrolling-regions", "unstable-rendered-line-info"] }
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
portable-pty = "0.8"
vte = "0.11"
vt100 = "0.15"
libc = "0.2"
toml = "0.8"
dirs = "5.0"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
rustyline = "14.0"
hostname = "0.4"
openssl-sys = { version = "0.9", optional = true }
glob = "0.3"
tempfile = "3"

[features]
real_rtm = []
openssl-vendored = ["openssl-sys/vendored"]

[build-dependencies]
cc = "1.0"
